--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -10,7 +10,9 @@ menu:
   清单||fas fa-list:
     音乐: /music/ || fas fa-music
     电源: /movies/ || fas fa-video
+    追番: /bangumis/index.html || fas fa-home
   友链: /link/ || fas fa-link
+  留言板: /comments/ || fas fa-envelope
   关于: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
@@ -87,7 +89,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: /img/topbackground.jpg
+index_img: https://s1.ax1x.com/2022/08/27/vRgGP1.jpg
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
@@ -630,7 +632,7 @@ hr_icon:
 
 # the subtitle on homepage (主頁subtitle)
 subtitle:
-  enable: false
+  enable: true
   # Typewriter Effect (打字效果)
   effect: true
   # Effect Speed Options (打字效果速度參數)
@@ -645,7 +647,7 @@ subtitle:
   # source: 2  調用一句網（簡體） http://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: false
+  source: http://yijuzhan.com/
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
 
@@ -703,6 +705,56 @@ aside:
     post_count: true
     last_push_date: true
     sort_order: # Don't modify the setting unless you know how it works
+
+
+# electric_clock 电子钟
+# see https://anzhiy.cn/posts/fc18.html
+electric_clock:
+  enable: true # 开关
+  priority: 5 #过滤器优先权
+  enable_page: all # 应用页面
+  exclude:
+    # - /posts/
+    # - /about/
+  layout: # 挂载容器类型
+    type: class
+    name: sticky_layout
+    index: 0
+  loading: https://cdn.cbd.int/hexo-butterfly-clock-anzhiyu@1.0.5/lib/loading.gif #加载动画自定义
+  clock_css: https://cdn.cbd.int/hexo-butterfly-clock-anzhiyu@1.0.5/lib/clock.min.css
+  clock_js: https://cdn.cbd.int/hexo-butterfly-clock-anzhiyu@1.0.5/lib/clock.min.js
+  ip_api: https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0
+  qweather_key:  # 和风天气key
+  gaud_map_key:  # 高得地图web服务key
+
+
+# hexo-butterfly-categories-card
+# see https://akilar.top/posts/a9131002/
+categoryBar:
+  enable: false # 开关
+  priority: 5 #过滤器优先权
+  enable_page: / # 应用页面
+  layout: # 挂载容器类型
+    type: id
+    name: recent-posts
+    index: 0
+  column: odd # odd：3列 | even：4列
+  row: 1 #显示行数，默认两行，超过行数切换为滚动显示
+  message:
+    - descr: 大学学习史
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover1.webp
+    - descr: 前端成长历程
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover2.webp
+    - descr: 生活欢乐多
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover3.webp
+    - descr:
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover4.webp
+    - descr:
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover5.webp
+    - descr:
+      cover: https://cdn.cbd.int/akilar-candyassets@1.0.36/image/cover6.webp
+  custom_css: https://cdn.cbd.int/hexo-butterfly-categories-card@1.0.0/lib/categorybar.css
+
 
 # busuanzi count for PV / UV in site
 # 訪問人數
@@ -844,7 +896,7 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
   field: site # site/post
   placeholder:
   blur: false
