--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "hexo": "^6.2.0",
     "hexo-asset-image": "github:CodeFalling/hexo-asset-image",
+    "hexo-bilibili-bangumi": "^1.8.2",
     "hexo-browsersync": "^0.3.0",
+    "hexo-butterfly-categories-card": "^1.0.0",
+    "hexo-butterfly-clock-anzhiyu": "^1.0.5",
+    "hexo-butterfly-envelope": "^1.0.15",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -23,6 +27,7 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-marked": "^5.0.0",
@@ -31,6 +36,7 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-landscape": "^0.0.3",
+    "live2d-widget-model-koharu": "^1.0.5",
     "pangu": "^4.0.7"
   }
 }
